--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dev_dependencies:
 flutter:
   assets:
       - assets/fonts/
+      - assets/images/
   fonts:
     - family: Vazirmatn
       fonts:
